# orx-parallel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.scripts/: run_benchmark.sh  run_benchmarks.sh
arch_benches/: all_pairs_dijkstra.rs  filter_map_reduce_sum.rs  filter_reduce_sum.rs  filtermap_collect.rs  flatmap.rs  flatmap_heterogeneous.rs  flatmap_insignificant_work.rs  flatmap_large_output.rs  iter_map_collect.rs  iter_reduce_concat.rs  map_collect.rs  map_filter_collect.rs  map_filter_collect_large.rs  map_filter_reduce.rs  map_find_expensive.rs  map_heterogeneous.rs  map_reduce_avg.rs  map_reduce_norm.rs  map_to_large_type.rs  nested_reduction.rs  reduce_black_box_sum.rs  reduce_sum.rs
benches/: all_pairs_dijkstra.rs  chain3_collect_map.rs  chain4_collect_map.rs  chain_collect_map.rs  collect_f.rs  collect_filter.rs  collect_filtermap.rs  collect_flatmap.rs  collect_iter_into_par.rs  collect_long_chain.rs  collect_m.rs  collect_m_large.rs  collect_map.rs  collect_map_filter.rs  collect_map_filter_hash_set.rs  collect_mf.rs  collect_option.rs  collect_result.rs  collect_result_arbitrary.rs  count_filtermap.rs  count_flatmap.rs  count_map.rs  count_map_filter.rs  drain_vec_collect_map_filter.rs  filter_map_reduce_sum.rs  filter_reduce_sum.rs  filtermap_collect.rs  find.rs  find_any.rs  find_flatmap.rs  find_iter_into_par.rs  find_map_filter.rs  flat_map.rs  flat_map_insignificant_work.rs  flat_map_large_output.rs  flatmap.rs  flatmap_heterogeneous.rs  flatmap_insignificant_work.rs  flatmap_large_output.rs  iter_map_collect.rs  (+37 more)
benches/results/: benchmark-results.xlsx
docs/: EasyConfiguration.md  RelationToRayon.md  using.md
examples/: benchmark_collect.rs  benchmark_find.rs  benchmark_find_any.rs  benchmark_heterogeneous.rs  benchmark_pools.rs  benchmark_reduce.rs  collect_result_vec.rs  collection_of_options.rs  collection_of_results.rs  function_composition_with_mut_using.rs  map_while.rs  max_num_threads_config.rs  mutable_par_iter.rs  par_mut.rs  par_recursive_iter.rs  rec_iter_map_collect.rs  rec_iter_map_sum.rs  using_for_each.rs  using_map.rs  using_metrics.rs  using_pools.rs  using_random_walk.rs  using_rng.rs  whilst_collection_of_options.rs  whilst_collection_of_results.rs  whilst_map_while.rs
examples/parallelization_on_tree/: collection_on_entire_tree.rs  main.rs  node.rs  reduction_on_entire_tree.rs  reduction_on_subset_of_tree.rs  run_utils.rs  tree.rs
examples/utils/: benchmark_utils.rs  mod.rs
src/: chunk_size.rs  default_fns.rs  env.rs  fn_sync.rs  generic_iterator.rs  into_par.rs  into_par_iter.rs  into_par_iter_rec.rs  iter_into_par_iter.rs  lib.rs  maybe.rs  num_threads.rs  par_iter.rs  par_iter_chain.rs  par_iter_fallible.rs  par_iter_option.rs  par_iter_optional.rs  par_iter_optional_depr.rs  par_iter_result.rs  par_thread_pool.rs  parallel_drainable.rs  parallelizable.rs  parallelizable_collection.rs  parallelizable_collection_mut.rs  params.rs  test_utils.rs  u_par_iter.rs
src/algorithms/: mod.rs
src/arch/: chunk_size.rs  par_iter.rs  prelude.rs
src/collect_into/: collect.rs  fixed_vec.rs  mod.rs  par_collect_into.rs  split_vec.rs  utils.rs  vec.rs
src/computational_variants/: empty.rs  fallible_option.rs  filter.rs  map.rs  map_filter_map.rs  mod.rs  optional.rs  par.rs  u_map.rs  u_par.rs  u_xap.rs  u_xap_filter_xap.rs  xap.rs  xap_filter_xap.rs
src/computations/: default_fns.rs  filtermap_filter_collect.rs  fold_result.rs  heap_sort.rs  idx.rs  map_collect.rs  map_filter_collect.rs  map_filter_map_collect_x.rs  mod.rs  using.rs
src/core/: default_fns.rs  diagnostics.rs  filtermap_fil_cnt.rs  filtermap_fil_col.rs  filtermap_fil_col_x.rs  filtermap_fil_find.rs  filtermap_fil_red.rs  flatmap_fil_cnt.rs  flatmap_fil_col.rs  flatmap_fil_col_x.rs  flatmap_fil_find.rs  flatmap_fil_red.rs  fmap_fil_col.rs  fmap_fil_colx.rs  fmap_fil_find.rs  map_col.rs  map_fil_cnt.rs  map_fil_col.rs  map_fil_col_deprecated.rs  map_fil_col_x.rs  map_fil_find.rs  map_fil_red.rs  mod.rs  params.rs  run_params.rs  runner.rs  utils.rs
src/enumerate/: mod.rs
src/exact_size/: mod.rs
src/executor/: mod.rs  parallel_executor.rs  thread_executor.rs
src/experiment/: mod.rs
src/generic_iterator/: collect.rs  early_exit.rs  iter.rs  mod.rs  reduce.rs  transformations.rs
src/generic_iterator2/: collect.rs  iter.rs  mod.rs  transformations.rs
src/generic_values/: option.rs  option_result.rs  result.rs  transformable_values.rs  values.rs  vector.rs  vector_result.rs  whilst_atom.rs  whilst_atom_result.rs  whilst_option.rs  whilst_option_result.rs  whilst_vector.rs  whilst_vector_result.rs
src/into/: as_par.rs  into_par.rs  iter_into_par.rs  mod.rs
src/iter/: mod.rs  special_iterators.rs
src/map_filter_map/: collect.rs  computations.rs  mfm.rs  mod.rs  transformations.rs  values.rs
src/orch/: mod.rs  num_spawned.rs  orchestrator.rs  par_handle.rs  par_scope.rs  par_thread_pool.rs
src/par/: cloned_copied.rs  fallible.rs  mod.rs  par_empty.rs  par_fil.rs  par_filtermap.rs  par_filtermap_fil.rs  par_flatmap.rs  par_flatmap_fil.rs  par_fmap.rs  par_fmap_fil.rs  par_map.rs  par_map_fil.rs  reduce.rs
src/par_iter/: mod.rs  par.rs  par_empty.rs  par_map.rs
src/par_iterators/: mod.rs  par.rs  par_iter.rs  par_map.rs
src/parameters/: chunk_size.rs  collect.rs  collect_ordering.rs  (+4 more)
src_arch/: collect.rs  into_par.rs  lib.rs  par.rs  par_cloned.rs  params.rs  size.rs  stable.rs
tests/: chain.rs  diagnostics.rs  into_par.rs  iter_into_par.rs  mut_iter.rs  par_empty.rs  par_fil.rs  par_filtermap.rs  par_filtermap_fil.rs  par_flatmap.rs  par_flatmap_fil.rs  par_fmap.rs  par_fmap_fil.rs  par_map.rs  par_map_fil.rs  parallel_drainable.rs  parallelizable.rs  parallelizable_collection.rs  reduce_i64.rs  reduce_string.rs  reduce_sum.rs  test_groups.rs  trait_bounds.rs  utils.rs
tests_arch/: par_empty.rs  par_fil.rs  par_filtermap.rs  par_filtermap_fil.rs  par_flatmap.rs  par_map.rs  par_map_fil.rs  reduce_string.rs  test_structure.rs
(+689 files in other folders)
