[package]
name = "orx-parallel"
version = "3.2.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
readme = "README.md"
description = "High performance, configurable and expressive parallel computation library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-parallel/"
keywords = ["parallel", "concurrency", "performance", "thread", "iterator"]
categories = ["concurrency", "algorithms"]

[dependencies]
orx-pseudo-default = { version = "2.1.0", default-features = false }
orx-pinned-vec = { version = "3.17.0", default-features = false }
orx-fixed-vec = { version = "3.18.0", default-features = false }
orx-split-vec = { version = "3.18.0", default-features = false }
orx-pinned-concurrent-col = { version = "2.14.0", default-features = false }
orx-concurrent-bag = { version = "3.0.0", default-features = false }
orx-concurrent-ordered-bag = { version = "3.0.0", default-features = false }
orx-iterable = { version = "1.3.0", default-features = false }
orx-priority-queue = { version = "1.7.0", default-features = false }
orx-concurrent-iter = { version = "3.1.0", default-features = false }
rayon = { version = "1.10.0", optional = true }
# optional thread pool dependencies
threadpool = { version = "1.8.1", optional = true }
scoped_threadpool = { version = "0.1.9", optional = true }
orx-self-or = { version = "1.2.0" }

[dev-dependencies]
chrono = "0.4.39"
clap = { version = "4.5.36", features = ["derive"] }
criterion = "0.5.1"
orx-concurrent-option = { version = "1.5.0", default-features = false }
orx-concurrent-vec = "3.6.0"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.10.0"
test-case = "3.3.1"

[[bench]]
name = "find_iter_into_par"
harness = false

[features]
default = ["threadpool", "scoped_threadpool", "rayon"]
generic_iterator = ["rayon"]
