[package]
name = "orx-parallel"
version = "3.2.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
readme = "README.md"
description = "High performance, configurable and expressive parallel computation library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-parallel/"
keywords = ["parallel", "concurrency", "performance", "thread", "iterator"]
categories = ["concurrency", "algorithms"]

[dependencies]
orx-pinned-vec = { version = "3.17.0", default-features = false }
orx-fixed-vec = { version = "3.19.0", default-features = false }
orx-split-vec = { version = "3.19.0", default-features = false }
orx-concurrent-iter = { version = "3.1.0", default-features = false }
orx-concurrent-bag = { version = "3.1.0", default-features = false }
orx-concurrent-ordered-bag = { version = "3.1.0", default-features = false }
orx-iterable = { version = "1.3.0", default-features = false }
orx-pinned-concurrent-col = { version = "2.15.0", default-features = false }
orx-priority-queue = { version = "1.7.0", default-features = false }
orx-pseudo-default = { version = "2.1.0", default-features = false }
orx-self-or = { version = "1.2.0" }
# optional thread pool dependencies
rayon = { version = "1.11.0", optional = true }
scoped_threadpool = { version = "0.1.9", optional = true }

[dev-dependencies]
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
criterion = "0.7.0"
orx-concurrent-option = { version = "1.5.0", default-features = false }
orx-concurrent-vec = "3.8.0"
rand = "0.9.2"
rand_chacha = "0.9"
rayon = "1.11.0"
test-case = "3.3.1"

[[bench]]
name = "find_iter_into_par"
harness = false

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = []
generic_iterator = ["rayon"]
