[package]
name = "orx-parallel"
version = "3.4.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
readme = "README.md"
description = "High performance, configurable and expressive parallel computation library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-parallel/"
keywords = ["parallel", "concurrency", "performance", "thread", "iterator"]
categories = ["concurrency", "algorithms"]

[dependencies]
orx-pinned-vec = { version = "3.21.0", default-features = false }
orx-fixed-vec = { version = "3.22.0", default-features = false }
orx-split-vec = { version = "3.22.0", default-features = false }
orx-concurrent-iter = { version = "3.3.0", default-features = false }
orx-concurrent-bag = { version = "3.4.0", default-features = false }
orx-concurrent-ordered-bag = { version = "3.4.0", default-features = false }
orx-pinned-concurrent-col = { version = "2.18.0", default-features = false }
orx-iterable = { version = "1.3.0", default-features = false }
orx-priority-queue = { version = "1.7.0", default-features = false }
orx-pseudo-default = { version = "2.1.0", default-features = false }
orx-concurrent-recursive-iter = { version = "1.1.0", default-features = false }

# optional: generic iterator
rayon = { version = "1.11.0", optional = true, default-features = false }

# optional: thread pool
pond = { version = "0.3.1", optional = true, default-features = false }
poolite = { version = "0.7.1", optional = true, default-features = false }
rayon-core = { version = "1.13.0", optional = true, default-features = false }
scoped-pool = { version = "1.0.0", optional = true, default-features = false }
scoped_threadpool = { version = "0.1.9", optional = true, default-features = false }
yastl = { version = "0.1.2", optional = true, default-features = false }

[dev-dependencies]
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
criterion = "0.7.0"
orx-concurrent-option = { version = "1.5.0", default-features = false }
orx-concurrent-vec = "3.10.0"
rand = "0.9.2"
rand_chacha = "0.9"
rayon = "1.11.0"
test-case = "3.3.1"

[[bench]]
name = "rec_iter_map_collect"
harness = false

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = []
generic_iterator = ["rayon"]
